--- a/learning_environment/templates/learning_environment/partials/pic_des.html
+++ b/learning_environment/templates/learning_environment/partials/pic_des.html
@@ -24,7 +24,7 @@
     {% else %}
         <p>You failed. You only mentioned <b>{{mentioned}}/5</b> nouns.</p>
     {% endif %}
-    <img src="{% static 'learning_environment/images/' %}{{task.content.1}}" class="images">
+    <img src="{% static 'learning_environment/images/' %}{{task.content.1}}" width="700" >
     <p><b>Your answer was:</b></p>
     <p style="padding: 10px; border: 2px solid black;"> {{answer}}</p>
     <p>
